// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VisibilityObserver /> with in-view rendering persisted once in view and scrolled back out of view the in-view render prop remains rendered 1`] = `
<span>
  IN VIEW
</span>
`;

exports[`<VisibilityObserver /> with minimal options matches its snapshot 1`] = `
<Observer
  onChange={[Function]}
  render={[Function]}
  tag="div"
  threshold={0}
  triggerOnce={false}
/>
`;

exports[`<VisibilityObserver /> with minimal options renders empty content via its in-view render prop 1`] = `null`;

exports[`<VisibilityObserver /> with render, callback, rootMargin and tag options Observer rendering in view render matches its snapshot 1`] = `
<span>
  IN VIEW
</span>
`;

exports[`<VisibilityObserver /> with render, callback, rootMargin and tag options Observer rendering out of view render matches its snapshot 1`] = `
<span>
  OUT OF VIEW
</span>
`;

exports[`<VisibilityObserver /> with render, callback, rootMargin and tag options matches its snapshot 1`] = `
<Observer
  onChange={[Function]}
  render={[Function]}
  rootMargin="100px"
  tag="span"
  threshold={0}
  triggerOnce={false}
/>
`;
